[gd_scene load_steps=111 format=2]

[ext_resource path="res://addons/rmsmartshape/shapes/point_array.gd" type="Script" id=1]
[ext_resource path="res://addons/rmsmartshape/materials/shape_material.gd" type="Script" id=2]
[ext_resource path="res://addons/rmsmartshape/shapes/shape_closed.gd" type="Script" id=3]
[ext_resource path="res://addons/rmsmartshape/shapes/point.gd" type="Script" id=4]
[ext_resource path="res://addons/rmsmartshape/vertex_properties.gd" type="Script" id=5]
[ext_resource path="res://Project/Levels/MoonLevel/moon.png" type="Texture" id=6]
[ext_resource path="res://Project/UI/PauseMenu/PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Project/Common/SpaceBackGround.jpeg" type="Texture" id=8]
[ext_resource path="res://Project/Levels/MoonLevel/Moon.gd" type="Script" id=9]
[ext_resource path="res://Project/UI/Transition/Transition.tscn" type="PackedScene" id=10]
[ext_resource path="res://Project/UI/HUD/HUD.tscn" type="PackedScene" id=11]
[ext_resource path="res://Project/Common/Coin.tscn" type="PackedScene" id=12]

[sub_resource type="Resource" id=99]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=100]
script = ExtResource( 4 )
position = Vector2( -182.429, 280.201 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 99 )

[sub_resource type="Resource" id=101]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=102]
script = ExtResource( 4 )
position = Vector2( 5262.74, 41.6066 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 101 )

[sub_resource type="Resource" id=103]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=104]
script = ExtResource( 4 )
position = Vector2( 5246.32, 1021.04 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 103 )

[sub_resource type="Resource" id=105]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=106]
script = ExtResource( 4 )
position = Vector2( -182.429, 280.201 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 105 )

[sub_resource type="Resource" id=107]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=108]
script = ExtResource( 4 )
position = Vector2( -181.256, 1015.78 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 107 )

[sub_resource type="Resource" id=109]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=110]
script = ExtResource( 4 )
position = Vector2( 437.791, 429.971 )
point_in = Vector2( -196.083, 2.26685 )
point_out = Vector2( 196.083, -2.26685 )
properties = SubResource( 109 )

[sub_resource type="Resource" id=111]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=112]
script = ExtResource( 4 )
position = Vector2( 842.425, 207.819 )
point_in = Vector2( -160.947, 20.4017 )
point_out = Vector2( 160.947, -20.4017 )
properties = SubResource( 111 )

[sub_resource type="Resource" id=113]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=114]
script = ExtResource( 4 )
position = Vector2( 1085.48, 212.556 )
point_in = Vector2( -163.214, -22.6686 )
point_out = Vector2( 163.214, 22.6686 )
properties = SubResource( 113 )

[sub_resource type="Resource" id=115]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=116]
script = ExtResource( 4 )
position = Vector2( 1607.94, 582.304 )
point_in = Vector2( -277.69, -64.6055 )
point_out = Vector2( 277.69, 64.6055 )
properties = SubResource( 115 )

[sub_resource type="Resource" id=117]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=118]
script = ExtResource( 4 )
position = Vector2( 2488.85, 156.135 )
point_in = Vector2( -319.627, -17.0014 )
point_out = Vector2( 319.627, 17.0014 )
properties = SubResource( 117 )

[sub_resource type="Resource" id=119]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=120]
script = ExtResource( 4 )
position = Vector2( 3276.12, 419.997 )
point_in = Vector2( -287.891, -3.4003 )
point_out = Vector2( 287.891, 3.4003 )
properties = SubResource( 119 )

[sub_resource type="Resource" id=121]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=122]
script = ExtResource( 4 )
position = Vector2( 3688.69, 344.057 )
point_in = Vector2( -162.08, 1.13342 )
point_out = Vector2( 162.08, -1.13342 )
properties = SubResource( 121 )

[sub_resource type="Resource" id=123]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=124]
script = ExtResource( 4 )
position = Vector2( 4047.08, 422.717 )
point_in = Vector2( -182.482, -14.7346 )
point_out = Vector2( 182.482, 14.7346 )
properties = SubResource( 123 )

[sub_resource type="Resource" id=125]
script = ExtResource( 1 )
_points = {
0: SubResource( 100 ),
1: SubResource( 102 ),
2: SubResource( 104 ),
3: SubResource( 106 ),
4: SubResource( 108 ),
5: SubResource( 110 ),
6: SubResource( 112 ),
7: SubResource( 114 ),
8: SubResource( 116 ),
9: SubResource( 118 ),
10: SubResource( 120 ),
11: SubResource( 122 ),
12: SubResource( 124 )
}
_point_order = [ 0, 5, 6, 7, 8, 9, 10, 11, 12, 1, 2, 4, 3 ]
_constraints = {
[ 0, 3 ]: 15
}
_next_key = 14

[sub_resource type="Resource" id=28]
script = ExtResource( 2 )
_edge_meta_materials = [  ]
fill_textures = [ ExtResource( 6 ) ]
fill_texture_normals = [  ]
fill_texture_z_index = -10
fill_mesh_offset = 0.0
render_offset = 0.0

[sub_resource type="Resource" id=126]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=127]
script = ExtResource( 4 )
position = Vector2( 5626.41, 43.2546 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 126 )

[sub_resource type="Resource" id=128]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=129]
script = ExtResource( 4 )
position = Vector2( 21516.7, -109.63 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 128 )

[sub_resource type="Resource" id=130]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=131]
script = ExtResource( 4 )
position = Vector2( 21513.4, 1063.66 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 130 )

[sub_resource type="Resource" id=132]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=133]
script = ExtResource( 4 )
position = Vector2( 5626.41, 43.2546 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 132 )

[sub_resource type="Resource" id=134]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=135]
script = ExtResource( 4 )
position = Vector2( 5630.19, 1010.22 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 134 )

[sub_resource type="Resource" id=136]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=137]
script = ExtResource( 4 )
position = Vector2( 6197.81, 359.712 )
point_in = Vector2( -167.445, -50.9615 )
point_out = Vector2( 167.445, 50.9615 )
properties = SubResource( 136 )

[sub_resource type="Resource" id=138]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=139]
script = ExtResource( 4 )
position = Vector2( 6937.96, 140.82 )
point_in = Vector2( -228.113, -26.6942 )
point_out = Vector2( 228.113, 26.6942 )
properties = SubResource( 138 )

[sub_resource type="Resource" id=140]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=141]
script = ExtResource( 4 )
position = Vector2( 8049.41, 554.821 )
point_in = Vector2( -424.679, -80.0823 )
point_out = Vector2( 424.679, 80.0823 )
properties = SubResource( 140 )

[sub_resource type="Resource" id=142]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=143]
script = ExtResource( 4 )
position = Vector2( 8936.15, 716.928 )
point_in = Vector2( -196.565, -12.1337 )
point_out = Vector2( 196.565, 12.1337 )
properties = SubResource( 142 )

[sub_resource type="Resource" id=144]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=145]
script = ExtResource( 4 )
position = Vector2( 9766.1, 733.915 )
point_in = Vector2( -257.234, 29.1208 )
point_out = Vector2( 257.234, -29.1208 )
properties = SubResource( 144 )

[sub_resource type="Resource" id=146]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=147]
script = ExtResource( 4 )
position = Vector2( 10999.4, 182.074 )
point_in = Vector2( -242.674, 138.324 )
point_out = Vector2( 242.674, -138.324 )
properties = SubResource( 146 )

[sub_resource type="Resource" id=148]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=149]
script = ExtResource( 4 )
position = Vector2( 12112.5, -322.294 )
point_in = Vector2( -346.7, 149.578 )
point_out = Vector2( 346.7, -149.578 )
properties = SubResource( 148 )

[sub_resource type="Resource" id=150]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=151]
script = ExtResource( 4 )
position = Vector2( 13646.8, -174.854 )
point_in = Vector2( -831.903, -548.44 )
point_out = Vector2( 831.903, 548.44 )
properties = SubResource( 150 )

[sub_resource type="Resource" id=152]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=153]
script = ExtResource( 4 )
position = Vector2( 16083.5, 82.428 )
point_in = Vector2( -605.803, -121.983 )
point_out = Vector2( 605.803, 121.983 )
properties = SubResource( 152 )

[sub_resource type="Resource" id=154]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=155]
script = ExtResource( 4 )
position = Vector2( 15093.2, 161.698 )
point_in = Vector2( -199.355, 51.2629 )
point_out = Vector2( 199.355, -51.2629 )
properties = SubResource( 154 )

[sub_resource type="Resource" id=156]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=157]
script = ExtResource( 4 )
position = Vector2( 18768.5, -71.0327 )
point_in = Vector2( -273.885, 789.938 )
point_out = Vector2( 273.885, -789.938 )
properties = SubResource( 156 )

[sub_resource type="Resource" id=158]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=159]
script = ExtResource( 4 )
position = Vector2( 20472.1, -23.2606 )
point_in = Vector2( -739.711, -258.128 )
point_out = Vector2( 739.711, 258.128 )
properties = SubResource( 158 )

[sub_resource type="Resource" id=160]
script = ExtResource( 1 )
_points = {
0: SubResource( 127 ),
1: SubResource( 129 ),
2: SubResource( 131 ),
3: SubResource( 133 ),
4: SubResource( 135 ),
5: SubResource( 137 ),
6: SubResource( 139 ),
7: SubResource( 141 ),
8: SubResource( 143 ),
9: SubResource( 145 ),
10: SubResource( 147 ),
11: SubResource( 149 ),
13: SubResource( 151 ),
15: SubResource( 153 ),
16: SubResource( 155 ),
18: SubResource( 157 ),
20: SubResource( 159 )
}
_point_order = [ 0, 5, 6, 7, 8, 9, 10, 11, 13, 16, 15, 18, 20, 1, 2, 4, 3 ]
_constraints = {
[ 0, 3 ]: 15
}
_next_key = 21

[sub_resource type="Resource" id=64]
script = ExtResource( 2 )
_edge_meta_materials = [  ]
fill_textures = [ ExtResource( 6 ) ]
fill_texture_normals = [  ]
fill_texture_z_index = -10
fill_mesh_offset = 0.0
render_offset = 0.0

[sub_resource type="Resource" id=161]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=162]
script = ExtResource( 4 )
position = Vector2( 5835.06, -480.328 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 161 )

[sub_resource type="Resource" id=163]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=164]
script = ExtResource( 4 )
position = Vector2( 12205.7, -604.422 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 163 )

[sub_resource type="Resource" id=165]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=166]
script = ExtResource( 4 )
position = Vector2( 11544.7, -248.47 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 165 )

[sub_resource type="Resource" id=167]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=168]
script = ExtResource( 4 )
position = Vector2( 5835.06, -480.328 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 167 )

[sub_resource type="Resource" id=169]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=170]
script = ExtResource( 4 )
position = Vector2( 6769.13, -198.21 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 169 )

[sub_resource type="Resource" id=171]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=172]
script = ExtResource( 4 )
position = Vector2( 9712.87, 452.503 )
point_in = Vector2( 681.332, -61.0148 )
point_out = Vector2( -681.332, 61.0148 )
properties = SubResource( 171 )

[sub_resource type="Resource" id=173]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=174]
script = ExtResource( 4 )
position = Vector2( 10746.7, 144.039 )
point_in = Vector2( 237.28, -115.25 )
point_out = Vector2( -237.28, 115.25 )
properties = SubResource( 173 )

[sub_resource type="Resource" id=175]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=176]
script = ExtResource( 4 )
position = Vector2( 7804.46, 69.4652 )
point_in = Vector2( 549.133, 152.537 )
point_out = Vector2( -549.133, -152.537 )
properties = SubResource( 175 )

[sub_resource type="Resource" id=177]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=178]
script = ExtResource( 4 )
position = Vector2( 8446.48, 275.557 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 177 )

[sub_resource type="Resource" id=179]
script = ExtResource( 1 )
_points = {
0: SubResource( 162 ),
1: SubResource( 164 ),
2: SubResource( 166 ),
3: SubResource( 168 ),
4: SubResource( 170 ),
5: SubResource( 172 ),
6: SubResource( 174 ),
7: SubResource( 176 ),
8: SubResource( 178 )
}
_point_order = [ 0, 1, 2, 6, 5, 8, 7, 4, 3 ]
_constraints = {
[ 0, 3 ]: 15
}
_next_key = 9

[sub_resource type="Resource" id=84]
script = ExtResource( 2 )
_edge_meta_materials = [  ]
fill_textures = [ ExtResource( 6 ) ]
fill_texture_normals = [  ]
fill_texture_z_index = -10
fill_mesh_offset = 0.0
render_offset = 0.0

[sub_resource type="Resource" id=180]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=181]
script = ExtResource( 4 )
position = Vector2( 19103.1, -319.724 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 180 )

[sub_resource type="Resource" id=182]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=183]
script = ExtResource( 4 )
position = Vector2( 25819.7, -315.465 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 182 )

[sub_resource type="Resource" id=184]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=185]
script = ExtResource( 4 )
position = Vector2( 25830.9, 845.593 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 184 )

[sub_resource type="Resource" id=186]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=187]
script = ExtResource( 4 )
position = Vector2( 19103.1, -319.724 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 186 )

[sub_resource type="Resource" id=188]
script = ExtResource( 5 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=189]
script = ExtResource( 4 )
position = Vector2( 19100.2, 859.715 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 188 )

[sub_resource type="Resource" id=190]
script = ExtResource( 1 )
_points = {
0: SubResource( 181 ),
1: SubResource( 183 ),
2: SubResource( 185 ),
3: SubResource( 187 ),
4: SubResource( 189 )
}
_point_order = [ 0, 1, 2, 4, 3 ]
_constraints = {
[ 0, 3 ]: 15
}
_next_key = 6

[sub_resource type="Resource" id=96]
script = ExtResource( 2 )
_edge_meta_materials = [  ]
fill_textures = [ ExtResource( 6 ) ]
fill_texture_normals = [  ]
fill_texture_z_index = -10
fill_mesh_offset = 0.0
render_offset = 0.0

[sub_resource type="RectangleShape2D" id=97]
extents = Vector2( 279.737, 153.347 )

[sub_resource type="RectangleShape2D" id=98]
extents = Vector2( 162.799, 1151.73 )

[node name="Moon" type="Node2D"]
position = Vector2( 3991.27, 179.787 )
script = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 11 )]

[node name="TransitionColor" parent="CanvasLayer" instance=ExtResource( 10 )]

[node name="FirstTerrain" type="StaticBody2D" parent="."]
position = Vector2( -3809.14, -210.525 )

[node name="SS2D_Shape_Closed" type="Node2D" parent="FirstTerrain"]
script = ExtResource( 3 )
_points = SubResource( 125 )
material_overrides = {
}
shape_material = SubResource( 28 )
tessellation_stages = 5
tessellation_tolerence = 4.0
flip_edges = false
render_edges = true
collision_size = 32.0
collision_offset = 0.0
collision_polygon_node_path = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FirstTerrain"]
visible = false
modulate = Color( 1, 1, 1, 0.3 )
polygon = PoolVector2Array( -186.311, 274.891, 54.152, 355.929, 258.162, 407.514, 354.846, 424.166, 437.791, 429.929, 472.876, 427.292, 504.865, 420.579, 534.143, 410.35, 561.094, 397.154, 586.102, 381.54, 609.544, 364.054, 653.284, 325.696, 738.851, 250.786, 762.109, 235.682, 786.858, 223.099, 813.505, 213.63, 827.658, 210.234, 842.425, 207.817, 947.021, 194.352, 963.106, 193.978, 1085.48, 212.553, 1100.56, 215.409, 1115.2, 219.719, 1129.47, 225.376, 1143.41, 232.282, 1170.52, 249.54, 1196.94, 270.784, 1303.78, 381.704, 1363.65, 442.885, 1432.12, 500.443, 1470.6, 526.119, 1512.47, 548.778, 1558.11, 567.731, 1607.95, 582.278, 1633.99, 586.689, 1660.08, 587.952, 1686.22, 586.265, 1712.41, 581.827, 1738.65, 574.838, 1764.95, 565.49, 1817.77, 540.548, 1924.41, 471.357, 2142.88, 300.533, 2255.4, 224.615, 2312.65, 194.664, 2370.61, 172.194, 2399.88, 164.273, 2429.33, 158.813, 2458.99, 156.026, 2488.85, 156.117, 2547.2, 161.848, 2602.64, 172.19, 2706.23, 204.019, 3076.61, 379.7, 3123.96, 395.829, 3172.75, 408.365, 3223.35, 416.641, 3276.12, 419.982, 3369.85, 417.74, 3439.24, 409.699, 3490.43, 397.737, 3529.58, 383.724, 3596.32, 356.853, 3615.1, 351.765, 3636.23, 347.773, 3660.51, 345.124, 3688.69, 344.043, 3743.14, 346.479, 3787.41, 353.772, 3825.2, 364.555, 3936.9, 404.024, 3985.94, 415.042, 4047.08, 422.691, 4066.62, 422.902, 4090.8, 420.852, 4151.71, 410.559, 4314.01, 369.377, 4723.34, 237.685, 5266.76, 35.9639, 5249.54, 1024.32, -184.558, 1019.08 )

[node name="SecondTerrainBottom" type="StaticBody2D" parent="."]
position = Vector2( -3356.41, -194.161 )

[node name="SS2D_Shape_Closed" type="Node2D" parent="SecondTerrainBottom"]
position = Vector2( -245.459, -16.364 )
script = ExtResource( 3 )
_points = SubResource( 160 )
material_overrides = {
}
shape_material = SubResource( 64 )
tessellation_stages = 5
tessellation_tolerence = 4.0
flip_edges = false
render_edges = true
collision_size = 32.0
collision_offset = 0.0
collision_polygon_node_path = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SecondTerrainBottom"]
visible = false
modulate = Color( 1, 1, 1, 0.3 )
polygon = PoolVector2Array( 5376.93, 19.6693, 5603.86, 166.006, 5792.43, 272.396, 5879.73, 315.106, 5952.36, 343.31, 5968.56, 347.099, 5985.75, 348.973, 6003.87, 349.055, 6022.87, 347.457, 6063.28, 339.764, 6106.55, 326.865, 6504.16, 154.541, 6553.83, 139.098, 6602.07, 128.264, 6648.44, 123.054, 6670.78, 122.867, 6692.5, 124.434, 6737.91, 132.608, 6788.34, 146.611, 6902.68, 189.138, 7483.21, 443.726, 7643.62, 498.756, 7803.95, 538.45, 8690.7, 700.536, 9082.91, 724.524, 9310.08, 728.878, 9520.64, 717.522, 9574.21, 708.06, 9637.53, 691.141, 9787.74, 638.481, 10142.7, 482.574, 10753.9, 165.705, 11867, -338.658, 12136, -455.871, 12285.5, -502.372, 12366.4, -517.966, 12452.2, -526.713, 12543.8, -527.278, 12641.7, -518.34, 12746.7, -498.579, 12859.4, -466.676, 12980.5, -421.309, 13110.8, -361.167, 13401.3, -191.218, 13694.2, -17.2121, 13950.3, 99.9216, 14172, 169.779, 14270.7, 189.976, 14361.7, 201.936, 14445.4, 206.869, 14521.8, 205.964, 14654.6, 191.467, 14847.7, 145.32, 15088.9, 65.5492, 15190.5, 40.7112, 15311, 23.9998, 15455.8, 19.759, 15629.7, 32.3296, 15838, 66.0634, 17305, 331.255, 17712.9, 340.436, 17901, 322.774, 18073.1, 286.968, 18152, 261.491, 18225.5, 230.534, 18292.9, 193.799, 18353.9, 150.974, 18407.9, 101.762, 18432.1, 74.6629, 18454.4, 45.839, 18474.7, 15.2595, 18493, -17.1153, 18509.1, -51.3215, 18523, -87.3967, 18549.9, -157.497, 18579.2, -219.88, 18610.7, -274.859, 18644.5, -322.743, 18680.5, -363.842, 18718.6, -398.464, 18758.7, -426.919, 18800.7, -449.514, 18844.7, -466.559, 18890.5, -478.364, 18938.1, -485.241, 18987.4, -487.498, 19038.3, -485.447, 19090.8, -479.405, 19200.2, -456.564, 19434.8, -376.469, 20226.6, -39.6436, 20360.3, 1.93339, 20483.9, 30.7639, 20597.7, 48.2447, 20701.9, 55.764, 20796.7, 54.7095, 20882.2, 46.4682, 20958.7, 32.4278, 21026.3, 13.9753, 21085.3, -7.50096, 21135.8, -30.6154, 21177.9, -53.9794, 21212, -76.214, 21256.7, -111.712, 21275.1, -135.058, 21271.2, 1050.62, 5381.45, 997.142 )

[node name="SecondTerrainTop" type="StaticBody2D" parent="."]
position = Vector2( -3805.75, -210.525 )

[node name="SS2D_Shape_Closed" type="Node2D" parent="SecondTerrainTop"]
script = ExtResource( 3 )
_points = SubResource( 179 )
material_overrides = {
}
shape_material = SubResource( 84 )
tessellation_stages = 5
tessellation_tolerence = 4.0
flip_edges = false
render_edges = true
collision_size = 32.0
collision_offset = 0.0
collision_polygon_node_path = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SecondTerrainTop"]
visible = false
modulate = Color( 1, 1, 1, 0.3 )
polygon = PoolVector2Array( 5821.68, -482.172, 12217.5, -607.53, 11544.7, -248.468, 10746.7, 144.039, 10396.3, 318.645, 10276.8, 358.491, 10128.5, 394.792, 9712.87, 452.522, 9462.84, 462.434, 9227.56, 450.618, 8824.17, 386.934, 8548.54, 311.796, 8446.47, 275.574, 8423.38, 264.815, 8331.39, 229.722, 7804.46, 69.4686, 6769.13, -198.207 )

[node name="FinishTerrain" type="StaticBody2D" parent="."]

[node name="SS2D_Shape_Closed" type="Node2D" parent="FinishTerrain"]
script = ExtResource( 3 )
_points = SubResource( 190 )
material_overrides = {
}
shape_material = SubResource( 96 )
tessellation_stages = 5
tessellation_tolerence = 4.0
flip_edges = false
render_edges = true
collision_size = 32.0
collision_offset = 0.0
collision_polygon_node_path = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FinishTerrain"]
visible = false
modulate = Color( 1, 1, 1, 0.3 )
polygon = PoolVector2Array( 19099.8, -323.035, 25823, -318.752, 25834.3, 848.918, 19096.9, 863.047 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 3000, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 2671.72, -589.452 )
scale = Vector2( 1.2616, 0.701088 )
texture = ExtResource( 8 )

[node name="RespawnZone" type="Area2D" parent="."]
position = Vector2( -4347.18, -88.8085 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RespawnZone"]
shape = SubResource( 97 )

[node name="KillZone2" type="Area2D" parent="."]
position = Vector2( 18524, 774.578 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone2"]
position = Vector2( -306.889, -72.5109 )
shape = SubResource( 97 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KillZone2"]
position = Vector2( 277.181, -71.0967 )
shape = SubResource( 97 )

[node name="KillZone" type="Area2D" parent="."]
position = Vector2( 1756.56, 753.19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2( -20.9751, -98.9668 )
shape = SubResource( 97 )

[node name="EndZone" type="Area2D" parent="."]
position = Vector2( 26081.3, -304.991 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndZone"]
shape = SubResource( 98 )

[node name="Pause" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Pause" parent="Pause" instance=ExtResource( 7 )]
visible = false

[node name="Coins" type="Node" parent="."]

[node name="Coin2" parent="Coins" instance=ExtResource( 12 )]
position = Vector2( 4042.48, 280.306 )

[node name="Coin" parent="Coins" instance=ExtResource( 12 )]
position = Vector2( 1827.05, 499.822 )

[node name="Coin3" parent="Coins" instance=ExtResource( 12 )]
position = Vector2( 6990.75, 135.087 )

[node name="Coin4" parent="Coins" instance=ExtResource( 12 )]
position = Vector2( 10975.8, 300.569 )

[node name="Coin5" parent="Coins" instance=ExtResource( 12 )]
position = Vector2( 14967.6, 121.578 )

[node name="Coin6" parent="Coins" instance=ExtResource( 12 )]
position = Vector2( 21328.8, -64.7678 )

[node name="Coin7" parent="Coins" instance=ExtResource( 12 )]
position = Vector2( 29230.2, -247.924 )

[connection signal="body_entered" from="RespawnZone" to="." method="_on_RespawnZone_body_entered"]
[connection signal="body_entered" from="KillZone2" to="." method="_on_KillZone_body_entered"]
[connection signal="body_entered" from="KillZone" to="." method="_on_KillZone_body_entered"]
[connection signal="body_entered" from="EndZone" to="." method="_on_EndZone_body_entered"]
